Fix contrast issue

--- a/src/globals.css
+++ b/src/globals.css
@@ -7,8 +7,8 @@
         rgb(96 96 96)
     );
     --exponential: cubic-bezier(1, 0, 0, 1);
-    --anchor-unvisited-color: rgb(0 102 204);
-    --anchor-visited-color: rgb(190 188 188);
+    --anchor-visited-color: rgb(85, 179, 238);
+    --anchor-unvisited-color: rgb(159, 255, 255);
     --header-background-color: rgb(24 24 24);
 }
 
